# veritax

./: .gitignore  DEPLOY.md  PRD-01-frontend.md  PRD-16-application.md  README.md  jurisdiction_requirements.json  package.json  pnpm-lock.yaml  render.yaml  tailwind.config.ts  tsconfig.json  vercel.json
.claude/: settings.json
DEMO-PRD/: PRD-00-veritax-master.md  PRD-02-record.md  PRD-05-runtime.md  PRD-06-mirror.md
app/: globals.css  page.tsx
backend/: .dockerignore  .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml
backend/app/: assessment.py  config.py  corpus.py  db.py  deps.py  drafting.py  embeddings.py  ingest.py  main.py  models.py  processing.py  requirements.py  risks.py  schemas.py  storage.py
backend/app/routers/: connectors.py  coverage.py  documents.py  draft.py  engagements.py  risks.py  search.py  sources.py
backend/tests/: conftest.py  test_connectors.py  test_coverage.py  test_documents.py  test_draft.py  test_engagements.py  test_errors.py  test_requirements.py  test_risks.py  test_search.py  test_sources.py
docs/: record-metrics-dashboard-contract.md  record-migration-plan.md  runtime-budgets-model-registry-contract.md  runtime-composite-contract.md  runtime-derived-authority-contract.md  runtime-foundation-contract.md  runtime-gate-escalation-contract.md  runtime-lifecycle-contract.md  runtime-operational-metrics-contract.md  runtime-plans-and-events-contract.md  runtime-priority-dispatch-contract.md  runtime-retry-staging-contract.md  runtime-safety-contract.md  runtime-scheduler-contract.md  vercel-demo-deploy.md  (+1 more)
(+374 files in other folders)
